t00/fixme10.n.ref.stderr
t00/fixme10.n.o.c:4167:22: error: field ‘x’ has incomplete type
 struct t00$fixme10$b x;
                      ^
command exited with 1: cat /tmp/nccQQoMZC |parallel
